Acrescentei novo branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Teste</title>
     </head>
     <body>
-        Olá, Mundo!
-        Eis uma nova linha.
+        Eis os conteúdos do novo branch.
     </body>
 </html>
